--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply hidden px-4 py-6 h-full border-r border-b border-[#e5e7eb]
+  @apply hidden px-4 py-6 h-full border-r border-[#e5e7eb]
   lg:flex lg:flex-col;
 
   > ul {
