--- a/src/app/[locale]/dashboard/profile/profilePage.module.scss
+++ b/src/app/[locale]/dashboard/profile/profilePage.module.scss
@@ -2,7 +2,7 @@
   @apply flex flex-col p-4 min-h-[100vh];
 
   .user-info {
-    @apply grid grid-cols-[80px_1fr] gap-4;
+    @apply grid grid-cols-[80px_1fr] gap-4 relative;
 
     .user-photo {
       @apply h-[80px] w-[80px] rounded-full bg-[#2a41e812] shadow-md flex items-center justify-center text-blue-200;
