--- a/src/components/VocabularyPage/VocabularyPage.module.scss
+++ b/src/components/VocabularyPage/VocabularyPage.module.scss
@@ -1,3 +1,6 @@
 .container {
-  @apply flex flex-col px-3;
+  @apply flex flex-col px-3 min-h-[calc(100vh-397px-81px)]
+  sm:min-h-[calc(100vh-193px-81px)] 
+  md:min-h-[calc(100vh-153px-81px)] 
+  lg:min-h-[calc(100vh-97px-81px)];
 }
