--- a/src/components/Category/components/CategoryDescription/CategoryDescription.module.scss
+++ b/src/components/Category/components/CategoryDescription/CategoryDescription.module.scss
@@ -1,5 +1,5 @@
 .top {
-  @apply px-4 mb-6 flex justify-between 
+  @apply mb-6 flex justify-between 
   sm:hidden
   lg:flex;
 
@@ -10,7 +10,7 @@
 }
 
 .description {
-  @apply hidden 
+  @apply hidden my-2
   sm:flex sm:rounded-2xl sm:border sm:border-[#849adba1] sm:flex-col sm:px-2 
   md:basis-5/12 md:justify-between md:min-w-[300px]
   lg:hidden;
