--- a/src/components/AddList/AddList.module.scss
+++ b/src/components/AddList/AddList.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply flex flex-col items-center text-[#bcc1c6] transition-all ease-linear duration-150
+  @apply mb-3 flex flex-col items-center text-[#bcc1c6] transition-all ease-linear duration-150
   [&_div]:transition-all [&_div]:ease-linear [&_div]:duration-150
   hover:text-purple-100 [&_div]:hover:text-purple-100 [&_div]:hover:border-purple-100;
 
