--- a/src/app/[locale]/dashboard/dashboardPage.module.scss
+++ b/src/app/[locale]/dashboard/dashboardPage.module.scss
@@ -1,3 +1,17 @@
 .container {
   @apply lg:grid lg:grid-cols-[255px_calc(100%-255px)] max-w-[100vw];
 }
+
+.loader-wrapper {
+  @apply w-[100vw] min-h-[calc(100vh-397px-81px)]
+  sm:min-h-[calc(100vh-193px-81px)] 
+  md:min-h-[calc(100vh-153px-81px)] 
+  lg:min-h-[calc(100vh-97px-81px)];
+}
+
+.loader {
+  @apply h-[calc(100vh-397px-81px)]
+  sm:h-[calc(100vh-193px-81px)] 
+  md:h-[calc(100vh-153px-81px)] 
+  lg:h-[calc(100vh-97px-81px)];
+}
