--- a/src/app/[locale]/contact-us/ContactUsPage.module.scss
+++ b/src/app/[locale]/contact-us/ContactUsPage.module.scss
@@ -52,5 +52,5 @@
 }
 
 .correct {
-  @apply border border-[#11a762] bg-[#11a762] text-white;
+  @apply border border-green-100 bg-green-100 text-white-100;
 }
