--- a/src/components/WordModal/WordModal.module.scss
+++ b/src/components/WordModal/WordModal.module.scss
@@ -40,7 +40,7 @@
 
       button {
         @apply px-6 mt-2 text-black shadow-md bg-transparent mb-2 rounded
-        last:mt-6 last:bg-blue-200 last:text-white last:shadow-none
+        last:mt-6 last:bg-blue-200 last:text-white-100 last:shadow-none
         hover:bg-grey-100 last:hover:bg-purple-100;
       }
     }
