--- a/src/app/[locale]/dashboard/grammar/[id]/SingleGrammar.module.scss
+++ b/src/app/[locale]/dashboard/grammar/[id]/SingleGrammar.module.scss
@@ -24,7 +24,7 @@
     }
 
     > ul {
-      @apply flex flex-col w-fit bg-blue-400 rounded p-3 mt-2 border-l border-l-4 border-l-blue-200 text-blue-300;
+      @apply flex flex-col w-fit bg-white-200 rounded p-3 mt-2 border-l border-l-4 border-l-blue-200 text-blue-300;
     }
   }
 
@@ -32,7 +32,7 @@
     @apply mt-7;
 
     a {
-      @apply border rounded bg-blue-200 py-2 px-4 font-bold text-white transition-all ease-in-out duration-300 
+      @apply border rounded bg-blue-200 py-2 px-4 font-bold text-white-100 transition-all ease-in-out duration-300 
       hover:bg-purple-100;
     }
   }
