--- a/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
+++ b/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
@@ -24,12 +24,12 @@
 
         > span {
           @apply text-sm px-2 py-1 rounded-2xl border border-blue-200 cursor-pointer transition-all ease-in-out duration-[.15s]
-          hover:bg-purple-100 hover:text-white hover:border-purple-100;
+          hover:bg-purple-100 hover:text-white-100 hover:border-purple-100;
         }
 
         .active {
-          @apply text-white bg-blue-200 cursor-default
-          hover:bg-blue-200 hover:text-white hover:border-blue-100;
+          @apply text-white-100 bg-blue-200 cursor-default
+          hover:bg-blue-200 hover:text-white-100 hover:border-blue-100;
         }
       }
     }
