--- a/src/app/[locale]/dashboard/quiz/[id]/SingleQuiz.module.scss
+++ b/src/app/[locale]/dashboard/quiz/[id]/SingleQuiz.module.scss
@@ -13,7 +13,7 @@
 
     a {
       @apply border border-blue-200 rounded text-blue-200 font-bold py-2 px-6 transition-all ease-linear duration-150
-      hover:border-purple-100 hover:bg-purple-100 hover:text-white;
+      hover:border-purple-100 hover:bg-purple-100 hover:text-white-100;
     }
 
     button {
