--- a/src/app/[locale]/notFound.module.scss
+++ b/src/app/[locale]/notFound.module.scss
@@ -22,7 +22,7 @@
     }
 
     .link {
-      @apply flex font-medium items-center justify-center bg-blue-200 text-white px-3 py-1.5 rounded transition-all ease-in-out duration-300
+      @apply flex font-medium items-center justify-center bg-blue-200 text-white-100 px-3 py-1.5 rounded transition-all ease-in-out duration-300
       hover:bg-purple-100;
 
       svg {
