--- a/src/components/AddList/AddList.module.scss
+++ b/src/components/AddList/AddList.module.scss
@@ -34,9 +34,9 @@
 }
 
 .correct {
-  @apply border border-[#11a762] bg-[#11a762] text-white;
+  @apply border border-green-100 bg-green-100 text-white-100;
 }
 
 .wrong {
-  @apply border border-red bg-red text-white;
+  @apply border border-red bg-red text-white-100;
 }
