--- a/src/components/AuthModal/AuthModal.module.scss
+++ b/src/components/AuthModal/AuthModal.module.scss
@@ -31,7 +31,7 @@
 
     button {
       @apply mt-2 text-black shadow-md bg-transparent mb-2 w-full rounded
-      last:mt-6 last:bg-blue-200 last:text-white last:shadow-none
+      last:mt-6 last:bg-blue-200 last:text-white-100 last:shadow-none
       hover:bg-grey-100 last:hover:bg-purple-100;
 
       svg {
