--- a/src/components/Category/Category.module.scss
+++ b/src/components/Category/Category.module.scss
@@ -1,4 +1,4 @@
 .container {
-  @apply mx-4 py-6 bg-gradient-to-b from-[#ffffff] to-[#f4f6f8]
+  @apply mx-4 py-6 bg-gradient-to-b from-white-100 to-[#f4f6f8]
   sm:px-4 sm:mx-0;
 }
