--- a/src/components/CustomCategory/CustomCategory.module.scss
+++ b/src/components/CustomCategory/CustomCategory.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply py-6 bg-gradient-to-b from-[#ffffff] to-[#f4f6f8]
+  @apply py-6 bg-gradient-to-b from-white-100 to-[#f4f6f8]
   sm:px-4;
 
   > div {
