--- a/src/components/TopBar/components/FilterWords/FilterWords.module.scss
+++ b/src/components/TopBar/components/FilterWords/FilterWords.module.scss
@@ -8,7 +8,7 @@
 }
 
 .modal {
-  @apply absolute z-[1] rounded-lg shadow-[0_.5rem_1rem_rgba(0,0,0,.15)] bg-[#ffffff] absolute top-[40px] left-[0px] w-[180px] h-[110px] p-2;
+  @apply absolute z-[1] rounded-lg shadow-[0_.5rem_1rem_rgba(0,0,0,.15)] bg-white-100 absolute top-[40px] left-[0px] w-[180px] h-[110px] p-2;
 
   li {
     @apply text-blue-200 font-medium px-4 py-1 flex items-center cursor-pointer transition-all ease-in-out duration-150;
