--- a/src/components/ui/Modal/Modal.module.scss
+++ b/src/components/ui/Modal/Modal.module.scss
@@ -2,7 +2,7 @@
   @apply fixed top-0 left-0 w-screen h-screen z-30 bg-neutral-800 opacity-50;
 }
 .modal {
-  @apply fixed max-w-[1040px] flex flex-col box-border min-w-fit overflow-hidden p-5 bg-white inset-y-0 inset-x-0 z-40
+  @apply fixed max-w-[1040px] flex flex-col box-border min-w-fit overflow-hidden p-5 bg-white-100 inset-y-0 inset-x-0 z-40
   sm:inset-x-12 sm:inset-y-28 sm:rounded
   lg:inset-x-20 lg:inset-y-24 lg:p-8
   xl:mx-auto;
