--- a/src/app/[locale]/dashboard/lists/ListsPage.module.scss
+++ b/src/app/[locale]/dashboard/lists/ListsPage.module.scss
@@ -21,7 +21,7 @@
     }
 
     h2 {
-      @apply text-lg text-[#0925509D] font-medium 
+      @apply text-lg text-blue-125 font-medium 
       sm:text-2xl;
     }
 
