--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -63,7 +63,7 @@
 }
 
 .dashboard {
-  @apply border-t border-[#e5e7eb];
+  @apply border-t border-grey-275;
 
   .footer-container {
     @apply mx-0
