--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -40,6 +40,6 @@
   }
 
   .dashboard {
-    @apply border-b border-[#e5e7eb] lg:max-w-[100%];
+    @apply border-b border-grey-275 lg:max-w-[100%];
   }
 }
