--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -8,6 +8,6 @@
 }
 
 .title {
-  @apply block text-center max-w-[100px] mt-3 text-sm font-semibold text-[#6c757d] 
+  @apply block text-center max-w-[100px] mt-3 text-sm font-semibold text-blue-350 
   sm:max-w-[135px];
 }
