--- a/src/components/UserRevies/UserReview.module.scss
+++ b/src/components/UserRevies/UserReview.module.scss
@@ -36,6 +36,10 @@
 
         .stars {
           @apply flex;
+
+          svg {
+            @apply fill-orange;
+          }
         }
 
         .platform {
