--- a/src/components/ui/Input/Input.module.scss
+++ b/src/components/ui/Input/Input.module.scss
@@ -3,5 +3,5 @@
 }
 
 .input {
-  @apply font-medium text-[#6c757d] opacity-90 px-3 py-1.5 rounded border border-[#ced4da] w-full;
+  @apply font-medium text-blue-350 opacity-90 px-3 py-1.5 rounded border border-grey-400 w-full;
 }
