--- a/src/app/[locale]/about-us/AboutUsPage.module.scss
+++ b/src/app/[locale]/about-us/AboutUsPage.module.scss
@@ -7,11 +7,11 @@
     @apply mt-12 pt-4 px-4 justify-center flex flex-col items-center pb-0;
 
     h6 {
-      @apply uppercase text-[#7b8ba5] text-sm mb-2 font-semibold text-center;
+      @apply uppercase text-blue-400 text-sm mb-2 font-semibold text-center;
     }
 
     h1 {
-      @apply text-center text-[#0e336b] mb-2 px-1 pt-6 text-[1.5rem] font-extrabold 
+      @apply text-center text-blue-150 mb-2 px-1 pt-6 text-[1.5rem] font-extrabold 
       sm:text-2xl sm:w-3/4
       md:text-[1.9rem] md:px-8 
       xl:text-[2rem] 
@@ -19,7 +19,7 @@
     }
 
     p {
-      @apply pt-2 px-2 text-justify leading-7 text-[#2e538b] text-[1.2rem] font-medium 
+      @apply pt-2 px-2 text-justify leading-7 text-blue-250 text-[1.2rem] font-medium 
       sm:text-[1.3rem] sm:w-5/6 sm:px-0 sm:pt-6
       md:px-8;
     }
@@ -42,7 +42,7 @@
     md:px-12;
 
     h2 {
-      @apply text-left text-[#0e336b] leading-8 mb-5 px-1 pt-6 text-3xl font-bold 
+      @apply text-left text-blue-150 leading-8 mb-5 px-1 pt-6 text-3xl font-bold 
       sm:text-[1.8rem] sm:text-left sm:px-0
       md:text-[1.9rem] md:pt-0 md:mb-12
       xl:text-[2rem] 
@@ -50,7 +50,7 @@
     }
 
     p {
-      @apply mt-1 mb-4 text-[#2e538b] text-[1.2rem] leading-7 font-medium
+      @apply mt-1 mb-4 text-blue-250 text-[1.2rem] leading-7 font-medium
       sm:text-[18px] sm:pr-6;
     }
   }
