--- a/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
+++ b/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
@@ -63,4 +63,11 @@
       }
     }
   }
+
+  .loader {
+    @apply h-[calc(100vh-397px-73px)] 
+    sm:h-[calc(100vh-193px-81px)] 
+    md:h-[calc(100vh-153px-81px)] 
+    lg:h-[calc(100vh-97px-81px)] lg:w-[calc(100vw-254px-32px)];
+  }
 }
