--- a/src/components/FlashCardWord/FlashCardWord.module.scss
+++ b/src/components/FlashCardWord/FlashCardWord.module.scss
@@ -14,7 +14,7 @@
   }
 
   input {
-    @apply font-medium text-[#6c757d] opacity-90 px-3 py-1.5 rounded border border-[#ced4da] w-full mb-2;
+    @apply font-medium text-blue-350 opacity-90 px-3 py-1.5 rounded border border-grey-400 w-full mb-2;
   }
 
   button {
