--- a/src/components/ProfileEditModal/ProfileEditModal.module.scss
+++ b/src/components/ProfileEditModal/ProfileEditModal.module.scss
@@ -12,7 +12,7 @@
 
   .form {
     .user-photo {
-      @apply relative h-[80px] w-[80px] rounded-full bg-[#2a41e812] shadow-md flex items-center justify-center text-blue-200;
+      @apply relative h-[80px] w-[80px] rounded-full bg-blue-225 shadow-md flex items-center justify-center text-blue-200;
 
       .edit {
         @apply flex items-center justify-center absolute right-[-25px] top-0;
