--- a/src/components/WordModal/WordModal.module.scss
+++ b/src/components/WordModal/WordModal.module.scss
@@ -24,7 +24,7 @@
           }
 
           select {
-            @apply font-medium px-3 py-1.5 rounded border border-[#ced4da] w-full h-[38px];
+            @apply font-medium px-3 py-1.5 rounded border border-grey-400 w-full h-[38px];
           }
         }
       }
