--- a/src/app/[locale]/dashboard/flashcard/[id]/Flashcard.module.scss
+++ b/src/app/[locale]/dashboard/flashcard/[id]/Flashcard.module.scss
@@ -16,6 +16,12 @@
     }
   }
 
+  .flashcard-slider {
+    .flashcard {
+      @apply h-[650px] relative;
+    }
+  }
+
   .loader {
     @apply h-[calc(100vh-397px-73px)] w-[calc(100vw-32px)]
     sm:h-[calc(100vh-193px-81px)] 
