--- a/src/app/[locale]/dashboard/lists/ListsPage.module.scss
+++ b/src/app/[locale]/dashboard/lists/ListsPage.module.scss
@@ -5,30 +5,21 @@
   md:min-h-[calc(100vh-153px-81px)] 
   lg:min-h-[calc(100vh-97px-81px)] lg:mx-0;
 
-  .top {
-    @apply flex flex-col items-center my-2 px-12 pt-10 pb-10 text-center;
+  .category {
+    @apply px-4 py-6;
 
-    h1 {
-      @apply text-lg text-black text-center font-semibold 
-      sm:text-2xl 
-      lg:text-[40px] lg:text-start;
+    .top {
+      @apply mb-6 flex justify-between;
+
+      h6 {
+        @apply font-bold mb-2 text-blue-150 
+      md:mb-0;
+      }
     }
 
-    img {
-      @apply w-[270px] py-4 
-      sm:w-auto sm:mb-2 
-      lg:mb-4;
-    }
-
-    h2 {
-      @apply text-lg text-blue-125 font-medium 
-      sm:text-2xl;
-    }
-
-    p {
-      @apply text-sm font-medium text-black mb-0 mt-2
-      sm:text-base 
-      lg:text-lg;
+    .categories {
+      @apply grid gap-4 grid-cols-2 
+      sm:grid-cols-4;
     }
   }
 
