--- a/src/components/TopBar/components/AddingWordForm/AddingWordForm.module.scss
+++ b/src/components/TopBar/components/AddingWordForm/AddingWordForm.module.scss
@@ -1,4 +1,4 @@
 .add {
-  @apply ml-2 h-[35px] w-[35px] bg-blue-100 rounded-full flex items-center justify-center cursor-pointer transition-all ease-linear duration-150
-  hover:bg-purple-100;
+  @apply text-white-100 bg-blue-200 flex items-center justify-center p-3 rounded-2xl transition-all ease-in-out duration-150
+  hover:bg-purple-100 hover:text-white-100;
 }
